--- a/src/app/components/landing_page/home/home.component.html
+++ b/src/app/components/landing_page/home/home.component.html
@@ -21,7 +21,7 @@
 			 	<nav>
 					<ul>
 						<li>
-							<a [routerLink]="['/login']" ><i class="fa fa-sign-in-alt"></i>Login</a>
+							<a [routerLink]="['/login']" ><i class="fa fa-sign-in"></i>Login</a>
 						</li>
 						<li>
 							<a [routerLink]="['/signUp']" ><i class="fa fa-user-plus"></i>Sign Up</a>
