view project html/css

--- a/src/app/components/user-profile/update-profile/update-profile.component.html
+++ b/src/app/components/user-profile/update-profile/update-profile.component.html
@@ -78,7 +78,7 @@
                     </div>
                 </div>    
 
-                    <input type="submit" class="full" value="Submit"/>
+                    <button type="submit" class="full">Submit</button>
             </form>
         </div>
     </div>
