--- a/src/app/components/commun/navbar-profile/navbar-profile.component.html
+++ b/src/app/components/commun/navbar-profile/navbar-profile.component.html
@@ -47,10 +47,8 @@
             </div>
           </li>
         <li class="nav-item avatar dropdown  ml-5">
-            <a class="nav-link" id="navbarDropdownMenuLink-55" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              <img src="{{user.profilePhoto}}" class="rounded-circle z-depth-0 img-taille"
-                alt="avatar image">
+            <a class="nav-link" id="navbarDropdownMenuLink-55" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <img src="{{user.profilePhoto}}" class="rounded-circle z-depth-0 img-taille" alt="avatar image">
             </a>
             <div class="dropdown-menu dropdown-menu-lg-right dropdown-secondary"
               aria-labelledby="navbarDropdownMenuLink-55">
