--- a/src/app/components/commun/navbar-profile/navbar-profile.component.html
+++ b/src/app/components/commun/navbar-profile/navbar-profile.component.html
@@ -62,4 +62,5 @@
     </div>
   </nav>
   <app-navbar-secondary></app-navbar-secondary>
+  <mat-spinner class="container"  *ngIf="showLoding"></mat-spinner>
   <router-outlet></router-outlet>
