--- a/src/app/components/landing_page/login/login.component.html
+++ b/src/app/components/landing_page/login/login.component.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <!-- First section Showcase -->
-	<section class="login-section">
+	<section class="login-section"  *ngIf="!showLoding">
 		<div class="left-section">
 			<div class="left-section-container">
 				<h1>Log In</h1>
@@ -59,5 +59,6 @@
 			
 		</div>
 	</section>
+	<mat-spinner class="container"  *ngIf="showLoding"></mat-spinner>
 </body>
 </html>
